--- a/tokyomarineserver/src/main/resources/application.properties
+++ b/tokyomarineserver/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+## Configuração de Fila de Mensageria ActiveMQ
+
 gkz.activemq.broker.url=tcp://localhost:61616
 gkz.activemq.broker.username=admin
 gkz.activemq.broker.password=admin
