--- a/tokyomarineserver/src/main/resources/application.properties
+++ b/tokyomarineserver/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Indent
 spring.jackson.serialization.indent_output=true
+
+# Configuração da porta da aplicação
+server.port = 8080
